--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@omiinaya/node-st",
+  "name": "@omiinaya/node-sit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
