--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://github.com/omiinaya/node-sysutil#readme"
+  "homepage": "https://github.com/omiinaya/node-sysutil#readme",
+  "dependencies": {
+    "@mh-cbon/aghfabsowecwn": "^2.0.4"
+  }
 }
