--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/omiinaya/node-sysutil#readme",
   "dependencies": {
-    "@mh-cbon/aghfabsowecwn": "^2.0.4"
+    "@mh-cbon/aghfabsowecwn": "^2.0.4",
+    "regedit": "^5.0.0"
   }
 }
